# Dockerized_Stock_Data_Pipeline

./: .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
dags/: stock_data_pipeline.py
scripts/: stock_fetcher.py
